crates/keron-lang/tests/corpus/errors/check/duplicate_val.keron
val name = "keron"

val name = "other"
